# flight

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  DUMP.md  OVERVIEW.md  README.md  commitlint.config.js  eslint.config.js  eslint.config.ts  lint.txt  package-lock.json  package.json  quimby.yaml  rust-toolchain.toml  tool-capture.batch.json  tsconfig.base.json  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  vite.config.base.ts  vite.config.ts  vitest.config.base.ts  vitest.config.ts  vitest.setup.ts
crates/flighthq-app/: Cargo.toml
crates/flighthq-app/src/: app.rs  lib.rs
crates/flighthq-application/: Cargo.toml
crates/flighthq-application/src/: application.rs  lib.rs  window.rs
crates/flighthq-capture/: Cargo.toml
crates/flighthq-capture/examples/: shape.rs  smoke.rs
crates/flighthq-capture/src/: lib.rs
crates/flighthq-capture/tests/: capture.rs
crates/flighthq-clipboard/: Cargo.toml
crates/flighthq-clipboard/src/: clipboard.rs  lib.rs
crates/flighthq-device/: Cargo.toml
crates/flighthq-device/src/: device.rs  lib.rs
crates/flighthq-dialog/: Cargo.toml
crates/flighthq-dialog/src/: dialog.rs  lib.rs
crates/flighthq-displayobject/: Cargo.toml
crates/flighthq-displayobject-skia/: Cargo.toml
crates/flighthq-displayobject-skia/src/: lib.rs  skia_bitmap.rs  skia_blend.rs  skia_clip.rs  skia_color.rs  skia_display_object.rs  skia_path.rs  skia_render_state.rs  skia_shape.rs  skia_surface.rs  skia_text.rs  skia_transform.rs
crates/flighthq-displayobject-wgpu/: Cargo.toml
crates/flighthq-displayobject-wgpu/src/: bitmap.rs  cache.rs  clip.rs  clip_contours.rs  clip_rectangle.rs  color_transform_material.rs  default_material.rs  display_object.rs  lib.rs  materials.rs  particle_emitter.rs  quad_batch.rs  render_stats.rs  renderer_data.rs  rich_text.rs  scale9_shape.rs  shape.rs  shape_mesh.rs  sprite.rs  sprite_batch.rs  sprite_renderer.rs  text_input.rs  text_label.rs  tilemap.rs  velocity.rs  video.rs
crates/flighthq-displayobject/src/: bitmap.rs  display_container.rs  display_object.rs  html_view.rs  lib.rs  render_view.rs  stage.rs  video.rs
crates/flighthq-effects-gl/: Cargo.toml
crates/flighthq-effects-gl/src/: antialiasing_effects.rs  atmospheric_effects.rs  color_grade_effects.rs  effect_program_cache.rs  lens_effects.rs  lib.rs  motion_effects.rs  render_effect_pipeline.rs  render_effect_registrar.rs  render_effect_registry.rs  stylization_effects.rs  tone_effects.rs
crates/flighthq-effects-wgpu/: Cargo.toml
crates/flighthq-effects-wgpu/src/: antialiasing_effects.rs  atmospheric_effects.rs  color_grade_effects.rs  effect_program_cache.rs  lens_effects.rs  lib.rs  motion_effects.rs  render_effect_pipeline.rs  render_effect_registrar.rs  render_effect_registry.rs  stylization_effects.rs  test_support.rs  tone_effects.rs
crates/flighthq-filters/: Cargo.toml
crates/flighthq-filters-gl/: Cargo.toml
crates/flighthq-filters-gl/src/: bevel_filter.rs  blur_filter.rs  color_matrix_filter.rs  convolution_filter.rs  displacement_map_filter.rs  drop_shadow_filter.rs  filter_pass.rs  gradient_bevel_filter.rs  gradient_glow_filter.rs  gradient_ramp.rs  inner_glow_filter.rs  inner_shadow_filter.rs  lib.rs  median_filter.rs  outer_glow_filter.rs  pixelate_filter.rs  scratch_count.rs  sharpen_filter.rs  tint_shader.rs
crates/flighthq-filters-surface/: Cargo.toml
crates/flighthq-filters-surface/src/: apply.rs  bevel.rs  blur.rs  color_matrix.rs  convolution.rs  gradient.rs  lib.rs  median.rs  shadow.rs  sharpen.rs
crates/flighthq-filters-wgpu/: Cargo.toml
crates/flighthq-filters-wgpu/src/: bevel_filter.rs  blur_filter.rs  color_matrix_filter.rs  convolution_filter.rs  displacement_map_filter.rs  drop_shadow_filter.rs  filter_pass.rs  gradient_bevel_filter.rs  gradient_glow_filter.rs  gradient_ramp.rs  inner_glow_filter.rs  inner_shadow_filter.rs  lib.rs  median_filter.rs  outer_glow_filter.rs  pixelate_filter.rs  scratch_count.rs  sharpen_filter.rs  tint_shader.rs
crates/flighthq-filters/src/: bitmap_filter_guards.rs  bitmap_filter_margin.rs  bitmap_filter_ops.rs  bitmap_filter_serialization.rs  bitmap_filter_validation.rs  blur_quality.rs  color_matrix_math.rs  convolution_kernels.rs  css.rs  lib.rs  math.rs  surface.rs
crates/flighthq-functional/: Cargo.toml
crates/flighthq-functional/baselines/: effect-bloom.fp  effect-bokeh-dof.fp  effect-chromatic-aberration.fp  effect-color-grade.fp  effect-dither.fp  effect-exposure.fp  effect-glitch.fp  effect-lens-flare.fp  effect-lensdirt.fp  effect-msaa-bloom.fp  effect-scanlines.fp  effect-smaa.fp  effect-taa.fp  effect-white-balance.fp  overlap-rects.fp
crates/flighthq-functional/src/: lib.rs  main.rs  scene.rs  scene_graph.rs  target.rs
crates/flighthq-geolocation/: Cargo.toml
crates/flighthq-geolocation/src/: geolocation.rs  lib.rs
crates/flighthq-haptics/: Cargo.toml
crates/flighthq-haptics/src/: haptics.rs  lib.rs
crates/flighthq-harness/: Cargo.toml
crates/flighthq-harness/src/: lib.rs  render_gl.rs  render_skia.rs  render_wgpu.rs  scene_graph.rs  shape.rs  target.rs
crates/flighthq-host-sdl/: Cargo.toml
crates/flighthq-host-sdl/examples/: demo.rs
crates/flighthq-host-sdl/src/: app.rs  event.rs  lib.rs  render_frame.rs
crates/flighthq-host-web/: Cargo.toml
crates/flighthq-host-web/src/: clipboard.rs  dialog.rs  filesystem.rs  host.rs  input.rs  lib.rs  notification.rs  shell.rs  storage.rs
crates/flighthq-host-winit/: Cargo.toml
crates/flighthq-host-winit/examples/: clear_window.rs  demo.rs
crates/flighthq-host-winit/src/: app.rs  bootstrap.rs  frame.rs  input_translation.rs  lib.rs  screen_backend.rs  window_backend.rs
crates/flighthq-interaction/: Cargo.toml
crates/flighthq-interaction/src/: display_hit_tests.rs  display_object_overlap.rs  lib.rs  (+6 more)
crates/flighthq-ipc/: Cargo.toml
crates/flighthq-keyboard/: Cargo.toml
crates/flighthq-lifecycle/: Cargo.toml
crates/flighthq-lighting/: Cargo.toml
crates/flighthq-loader/: Cargo.toml
crates/flighthq-log/: Cargo.toml
(+3489 files in other folders)
