[workspace]
members = ["crates/*", "examples/crates/*", "examples/runners/native", "examples/runners/wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["FlightHQ Contributors"]

# One greppable lint decision, inherited by every crate via `[lints] workspace = true`.
# `too_many_arguments` is allowed workspace-wide on purpose: Flight's conventions PRODUCE wide
# signatures by design — explicit free-function params, `out`/`target` params, and flattened scalar
# args instead of wrapper-object params (a material ctor takes rgba + metallic + roughness + … as
# scalars). A params-struct refactor would fight the value-type convention and break 1:1 signature
# conformance with the authoritative TS source. See rust/conformance.md.
#
# `type_complexity` is likewise allowed: the event-capability seam recurs the same boxed-callback
# subscription registry — `Mutex<Option<HashMap<id, Box<dyn Fn(...) + Send + Sync>>>>` — identically
# across the whole platform suite (screen/power/lifecycle/keyboard/network/…). That shape is produced
# by Flight's free-function-callback + lazy-registry conventions, not a code smell; where a piece of it
# names a real concept it is given a `type` alias, but a workspace-wide refactor would just scatter
# near-identical aliases. Allow it once here.
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
# Internal crates
flighthq-types = { path = "crates/flighthq-types" }
flighthq-entity = { path = "crates/flighthq-entity" }
flighthq-math = { path = "crates/flighthq-math" }
flighthq-geometry = { path = "crates/flighthq-geometry" }
flighthq-node = { path = "crates/flighthq-node" }
flighthq-signals = { path = "crates/flighthq-signals" }
flighthq-log = { path = "crates/flighthq-log" }
flighthq-clip = { path = "crates/flighthq-clip" }
flighthq-path = { path = "crates/flighthq-path" }
flighthq-shape = { path = "crates/flighthq-shape" }
flighthq-displayobject = { path = "crates/flighthq-displayobject" }
flighthq-sprite = { path = "crates/flighthq-sprite" }
flighthq-scene = { path = "crates/flighthq-scene" }
flighthq-mesh = { path = "crates/flighthq-mesh" }
flighthq-skeleton = { path = "crates/flighthq-skeleton" }
flighthq-lighting = { path = "crates/flighthq-lighting" }
flighthq-texture = { path = "crates/flighthq-texture" }
flighthq-camera = { path = "crates/flighthq-camera" }
flighthq-scene-gl = { path = "crates/flighthq-scene-gl" }
flighthq-scene-wgpu = { path = "crates/flighthq-scene-wgpu" }
flighthq-velocity = { path = "crates/flighthq-velocity" }
flighthq-render = { path = "crates/flighthq-render" }
flighthq-render-gl = { path = "crates/flighthq-render-gl" }
flighthq-render-wgpu = { path = "crates/flighthq-render-wgpu" }
flighthq-displayobject-gl = { path = "crates/flighthq-displayobject-gl" }
flighthq-displayobject-wgpu = { path = "crates/flighthq-displayobject-wgpu" }
flighthq-displayobject-skia = { path = "crates/flighthq-displayobject-skia" }
flighthq-filters = { path = "crates/flighthq-filters" }
flighthq-filters-gl = { path = "crates/flighthq-filters-gl" }
flighthq-filters-math = { path = "crates/flighthq-filters-math" }
flighthq-filters-wgpu = { path = "crates/flighthq-filters-wgpu" }
flighthq-effects = { path = "crates/flighthq-effects" }
flighthq-effects-gl = { path = "crates/flighthq-effects-gl" }
flighthq-effects-wgpu = { path = "crates/flighthq-effects-wgpu" }
flighthq-surface = { path = "crates/flighthq-surface" }
flighthq-surface-wasm = { path = "crates/flighthq-surface-wasm" }
flighthq-filters-surface = { path = "crates/flighthq-filters-surface" }
flighthq-materials = { path = "crates/flighthq-materials" }
flighthq-text = { path = "crates/flighthq-text" }
flighthq-textlayout = { path = "crates/flighthq-textlayout" }
flighthq-textinput = { path = "crates/flighthq-textinput" }
flighthq-textshaper = { path = "crates/flighthq-textshaper" }
flighthq-image = { path = "crates/flighthq-image" }
flighthq-font = { path = "crates/flighthq-font" }
flighthq-video = { path = "crates/flighthq-video" }
flighthq-audio = { path = "crates/flighthq-audio" }
flighthq-textureatlas = { path = "crates/flighthq-textureatlas" }
flighthq-textureatlas-formats = { path = "crates/flighthq-textureatlas-formats" }
flighthq-tileset = { path = "crates/flighthq-tileset" }
flighthq-loader = { path = "crates/flighthq-loader" }
flighthq-animation = { path = "crates/flighthq-animation" }
flighthq-picking = { path = "crates/flighthq-picking" }
flighthq-scene-formats = { path = "crates/flighthq-scene-formats" }
flighthq-tween = { path = "crates/flighthq-tween" }
flighthq-easing = { path = "crates/flighthq-easing" }
flighthq-timeline = { path = "crates/flighthq-timeline" }
flighthq-spritesheet = { path = "crates/flighthq-spritesheet" }
flighthq-spritesheet-formats = { path = "crates/flighthq-spritesheet-formats" }
flighthq-particles = { path = "crates/flighthq-particles" }
flighthq-particles-formats = { path = "crates/flighthq-particles-formats" }
flighthq-input = { path = "crates/flighthq-input" }
flighthq-interaction = { path = "crates/flighthq-interaction" }
flighthq-application = { path = "crates/flighthq-application" }
flighthq-media = { path = "crates/flighthq-media" }
flighthq-platform = { path = "crates/flighthq-platform" }
flighthq-useragent = { path = "crates/flighthq-useragent" }
flighthq-filesystem = { path = "crates/flighthq-filesystem" }
flighthq-storage = { path = "crates/flighthq-storage" }
flighthq-shell = { path = "crates/flighthq-shell" }
flighthq-screen = { path = "crates/flighthq-screen" }
flighthq-dialog = { path = "crates/flighthq-dialog" }
flighthq-clipboard = { path = "crates/flighthq-clipboard" }
flighthq-notification = { path = "crates/flighthq-notification" }
flighthq-shortcut = { path = "crates/flighthq-shortcut" }
flighthq-menu = { path = "crates/flighthq-menu" }
flighthq-tray = { path = "crates/flighthq-tray" }
flighthq-app = { path = "crates/flighthq-app" }
flighthq-protocol = { path = "crates/flighthq-protocol" }
flighthq-updater = { path = "crates/flighthq-updater" }
flighthq-ipc = { path = "crates/flighthq-ipc" }
flighthq-network = { path = "crates/flighthq-network" }
flighthq-power = { path = "crates/flighthq-power" }
flighthq-lifecycle = { path = "crates/flighthq-lifecycle" }
flighthq-keyboard = { path = "crates/flighthq-keyboard" }
flighthq-sensors = { path = "crates/flighthq-sensors" }
flighthq-device = { path = "crates/flighthq-device" }
flighthq-webcam = { path = "crates/flighthq-webcam" }
flighthq-geolocation = { path = "crates/flighthq-geolocation" }
flighthq-haptics = { path = "crates/flighthq-haptics" }
flighthq-share = { path = "crates/flighthq-share" }
flighthq-statusbar = { path = "crates/flighthq-statusbar" }
flighthq-sdk = { path = "crates/flighthq-sdk" }
flighthq-capture = { path = "crates/flighthq-capture" }

# External crates
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = "1"
glow = "0.14"
wgpu = { version = "22", default-features = false, features = ["wgsl"] }
tiny-skia = "0.11"
ttf-parser = "0.20"
bitflags = "2"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serial_test = "3"
regex = "1"
