[package]
name = "flighthq-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application identity, lifecycle control, single-instance locking, dock control, and app event signals over a swappable web/native backend"

[dependencies]
flighthq-types = { workspace = true }
flighthq-signals = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
