[package]
name = "flighthq-application"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Application and window host layer bridging platform events to the scene graph"

[dependencies]
flighthq-node = { workspace = true }
flighthq-signals = { workspace = true }
flighthq-input = { workspace = true }
flighthq-types = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
