[package]
name = "flighthq-clipboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System clipboard read/write (text, HTML) over a swappable web/native backend"

[dependencies]
flighthq-types = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
