[package]
name = "flighthq-device"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Device identity, hardware, and safe-area insets over a swappable web/native backend"

[dependencies]
flighthq-types = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
