[package]
name = "flighthq-dialog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native open/save file, message, confirm, and prompt dialogs over a swappable web/native backend"

[dependencies]
flighthq-types = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
pollster = "0.3"


[lints]
workspace = true
