[package]
name = "flighthq-displayobject-skia"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Portable software display-object renderer (tiny-skia); the deterministic conformance reference and web no-GPU fallback"

[dependencies]
flighthq-displayobject = { workspace = true }
flighthq-geometry = { workspace = true }
flighthq-materials = { workspace = true }
flighthq-node = { workspace = true }
flighthq-path = { workspace = true }
flighthq-render = { workspace = true }
flighthq-shape = { workspace = true }
flighthq-sprite = { workspace = true }
flighthq-surface = { workspace = true }
flighthq-text = { workspace = true }
flighthq-text-input = { workspace = true }
flighthq-text-layout = { workspace = true }
flighthq-types = { workspace = true }
tiny-skia = { workspace = true }
ttf-parser = { workspace = true }
