[package]
name = "flighthq-displayobject-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU display-object renderers (bitmap, shape, sprite, text, tilemap, particles)"

[dependencies]
flighthq-displayobject = { workspace = true }
flighthq-geometry = { workspace = true }
flighthq-materials = { workspace = true }
flighthq-node = { workspace = true }
flighthq-path = { workspace = true }
flighthq-render = { workspace = true }
flighthq-render-wgpu = { workspace = true }
flighthq-shape = { workspace = true }
flighthq-sprite = { workspace = true }
flighthq-text = { workspace = true }
flighthq-textinput = { workspace = true }
flighthq-textlayout = { workspace = true }
flighthq-types = { workspace = true }
flighthq-velocity = { workspace = true }
wgpu = { workspace = true }
