[package]
name = "flighthq-displayobject"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Display object tree for composited 2D rendering: bitmaps, shapes, text, masks, blend modes"

[dependencies]
flighthq-clip = { workspace = true }
flighthq-materials = { workspace = true }
flighthq-node = { workspace = true }
flighthq-signals = { workspace = true }
flighthq-types = { workspace = true }
slotmap = { workspace = true }

[lints]
workspace = true
