[package]
name = "flighthq-effects-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU shader recipes for render effects (substrate-agnostic post-process pipeline)"

[dependencies]
flighthq-effects = { workspace = true }
flighthq-filters-wgpu = { workspace = true }
flighthq-render-wgpu = { workspace = true }
flighthq-types = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
pollster = "0.3"

[lints]
workspace = true
