[package]
name = "flighthq-filters-surface"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Surface (CPU pixel) implementations for bitmap filter effects"

[dependencies]
flighthq-filters = { workspace = true }
flighthq-surface = { workspace = true }
flighthq-types = { workspace = true }

[lints]
workspace = true
