[package]
name = "flighthq-filters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bitmap filter descriptors, CSS serialization, and bitmap-surface implementations"

[dependencies]
flighthq-types = { workspace = true }
flighthq-geometry = { workspace = true }
flighthq-filters-surface = { workspace = true }

[dev-dependencies]
flighthq-surface = { workspace = true }
