[package]
name = "flighthq-filters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bitmap filter descriptors and shared cross-substrate blur math"

[dependencies]
flighthq-types = { workspace = true }
flighthq-geometry = { workspace = true }

[lints]
workspace = true
