[package]
name = "flighthq-functional"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Flight Rust functional/visual harness: render scenes headlessly and gate them for regression (vs committed fingerprints) and parity (vs TS baselines)"

[dependencies]
flighthq-capture = { workspace = true }
flighthq-displayobject = { workspace = true }
flighthq-displayobject-wgpu = { workspace = true }
flighthq-displayobject-gl = { workspace = true }
flighthq-displayobject-skia = { workspace = true }
flighthq-effects = { workspace = true }
flighthq-effects-wgpu = { workspace = true }
flighthq-render = { workspace = true }
flighthq-render-wgpu = { workspace = true }
flighthq-render-gl = { workspace = true }
flighthq-shape = { workspace = true }
flighthq-path = { workspace = true }
flighthq-surface = { workspace = true }
flighthq-types = { workspace = true }
serde_json = "1"
wgpu = { workspace = true }
# The gl cell needs a headless GLES 3.0 context. `khronos-egl` (dynamic) loads
# libEGL at runtime so a box without it degrades to a skipped cell rather than a
# link error; `glow` (the same 0.14 the render-gl crate uses) wraps the GL calls.
glow = { workspace = true }
khronos-egl = { version = "6", features = ["dynamic"] }

[[bin]]
name = "flighthq-functional"
path = "src/main.rs"
