[package]
name = "flighthq-geolocation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Device geolocation (current position, watch, permission) over a swappable web/native backend"

[dependencies]
flighthq-types = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
pollster = "0.3"
