[package]
name = "flighthq-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Flight Rust render harness: the shared backend-switch seam (RenderTarget + one backend-agnostic scene graph rendered through skia/gl/wgpu) that the functional matrix and the example runners both consume. Test/tool-scoped — never published, never re-exported from flighthq-sdk."

[dependencies]
flighthq-displayobject = { workspace = true }
flighthq-displayobject-gl = { workspace = true }
flighthq-displayobject-skia = { workspace = true }
flighthq-displayobject-wgpu = { workspace = true }
flighthq-node = { workspace = true }
flighthq-render = { workspace = true }
flighthq-render-gl = { workspace = true }
flighthq-render-wgpu = { workspace = true }
flighthq-shape = { workspace = true }
flighthq-types = { workspace = true }
# The gl cell needs a headless GLES 3.0 context. `khronos-egl` (dynamic) loads
# libEGL at runtime so a box without it degrades to a skipped cell rather than a
# link error; `glow` (the same 0.14 the render-gl crate uses) wraps the GL calls.
glow = { workspace = true }
khronos-egl = { version = "6", features = ["dynamic"] }

[lints]
workspace = true
