[package]
name = "flighthq-keyboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "On-screen (soft) keyboard visibility, height, and show/hide/resize signals over a swappable web/native backend"

[dependencies]
flighthq-signals = { workspace = true }
flighthq-types = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
