[package]
name = "flighthq-lighting"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Light descriptors: ambient/directional/point/spot/hemisphere/area and environment"

[dependencies]
flighthq-entity = { workspace = true }
flighthq-geometry = { workspace = true }
flighthq-types = { workspace = true }

[lints]
workspace = true
