[package]
name = "flighthq-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Group resource loading with progress and completion signals"

[dependencies]
flighthq-image = { workspace = true }
flighthq-signals = { workspace = true }
flighthq-types = { workspace = true }

[lints]
workspace = true
