[package]
name = "flighthq-log"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Leveled, capture-aware logging: structured entries to a sink, plus gated console output"

[dependencies]
flighthq-signals = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
